<resources>
    <string name="app_name">pam-uas</string>
    <string name="brand_text">Selamat Datang di Julio Betta Companion</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="text_button_login">LOGIN</string>
    <string name="text_register_button">Create New Account</string>
    <string name="hint_name">Nama</string>
    <string name="text_button_register">Create Account</string>
    <string name="text_button_registerconfirm" />
    <string name="brand_register_text">Create Account</string>
    <string name="content_desc_fish_image">Fish Image</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="lorem_small">lorem ipsum dolor sit amet</string>
    <string name="checkout_button">Check Out</string>
    <string name="hint_address">Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_brand_text">Pesanan Saya</string>
    <string name="order_header_text">Status Pengiriman</string>
    <string name="error_message">Seems like you have no internet connection right now. Try again later.</string>
    <string name="nav_text_home">Beranda</string>
    <string name="narv_text_logout">Log Out</string>
    <string name="nav_text_order">My Orders</string>
</resources>