<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7879F1"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/brand_margin"
            android:fontFamily="@font/sacramento"
            android:text="@string/brand_text"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="48sp" />

        <LinearLayout
            android:id="@+id/form_view"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80sp"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00000000"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/hint_username"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingLeft="@dimen/form_padding"
                android:paddingRight="@dimen/form_padding" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/hint_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/form_padding"
                android:paddingRight="@dimen/form_padding" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:backgroundTint="@color/colorPrimaryDark"
                android:fontFamily="@font/roboto"
                android:text="@string/text_button_login"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/top_margin"
            android:background="@drawable/register_button"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/roboto"
            android:text="@string/text_register_button"
            android:textColor="@android:color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>